Update video duration icon.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_video.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/sceyt_color_gray"/>
+        app:srcCompat="@color/sceyt_color_gray" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDuration"
@@ -30,9 +30,10 @@
         android:backgroundTint="@color/sceyt_progress_bg_color"
         android:drawableStart="@drawable/sceyt_ic_video"
         android:drawablePadding="5dp"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:paddingHorizontal="7dp"
-        android:paddingVertical="3dp"
+        android:paddingVertical="2dp"
         android:textColor="@color/sceyt_color_white"
         android:textSize="11sp"
         android:visibility="gone"
