--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
@@ -46,9 +46,10 @@
             android:backgroundTint="#4D000000"
             android:drawableStart="@drawable/sceyt_ic_video"
             android:drawablePadding="5dp"
+            android:gravity="center"
             android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
-            android:paddingVertical="3dp"
+            android:paddingVertical="2dp"
             android:textColor="@color/sceyt_color_white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
