--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
@@ -165,9 +165,10 @@
             android:backgroundTint="@color/sceyt_progress_bg_color"
             android:drawableStart="@drawable/sceyt_ic_video"
             android:drawablePadding="5dp"
+            android:gravity="center"
             android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
-            android:paddingVertical="3dp"
+            android:paddingVertical="2dp"
             android:textColor="@color/sceyt_color_white"
             android:textSize="11sp"
             android:visibility="gone"
