--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_video_message.xml
@@ -135,7 +135,8 @@
             android:drawablePadding="5dp"
             android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
-            android:paddingVertical="3dp"
+            android:paddingVertical="2dp"
+            android:gravity="center"
             android:textColor="@color/sceyt_color_white"
             android:textSize="11sp"
             android:visibility="gone"
