SearchInputView renamed to SearchChannelInputView. Clean code in ConversationActivity. Add logic to handle start search message event in ConversationHeaderView. Improve logic to add recorderView in MessageInputView. DraftMessage property moved as param in SceytChannel. Fix open new activity anim.

--- a/examples/SceytDemoApp/src/main/res/layout/fragment_channels.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_channels.xml
@@ -53,7 +53,7 @@
                 android:background="@color/sceyt_color_bg"
                 app:elevation="0dp">
 
-                <com.sceyt.sceytchatuikit.presentation.uicomponents.searchinput.SearchInputView
+                <com.sceyt.sceytchatuikit.presentation.uicomponents.searchinput.SearchChannelInputView
                     android:id="@+id/searchView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
