--- a/SceytChatUiKit/src/main/res/values-night/colors.xml
+++ b/SceytChatUiKit/src/main/res/values-night/colors.xml
@@ -23,5 +23,6 @@
     <color name="sceyt_color_bg_out_link_preview">#2E3052</color>
     <color name="sceyt_color_bg_inc_link_preview">#303032</color>
 
+    <color name="sceyt_color_bg_unread_messages_separator">#303032</color>
 
 </resources>
