Improve ripple effect.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -12,7 +12,8 @@
         android:id="@+id/parentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground">
+        android:foreground="@drawable/sceyt_bg_ripple"
+        tools:ignore="UnusedAttribute">
 
         <View
             android:id="@+id/viewPinned"
