--- a/SceytChatUiKit/src/main/res/drawable/sceyt_bg_ripple.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_bg_ripple.xml
@@ -1,8 +1,8 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?colorControlHighlight">
-    <item>
+    android:color="#26000000">
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/sceyt_color_bg" />
+            <solid android:color="#000000" />
         </shape>
     </item>
 </ripple>
