--- a/SceytChatUiKit/src/main/res/drawable/sceyt_bg_ripple_circle.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_bg_ripple_circle.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?colorControlHighlight">
+    android:color="#26000000">
     <item android:id="@android:id/mask">
         <shape android:shape="oval">
             <solid android:color="#000000" />
