Improve logic to set UI kit theme.

--- a/examples/SceytDemoApp/src/main/res/layout/activity_main.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/activity_main.xml
@@ -1,43 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/con"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/sceyt_color_bg"
+    android:fitsSystemWindows="true"
+    tools:context=".presentation.mainactivity.MainActivity">
 
-    <data>
-
-        <import type="com.sceyt.chat.demo.R" />
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/con"
-        themedBackgroundColor="@{com.sceyt.sceytchatuikit.R.color.sceyt_color_bg}"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/sceyt_color_bg"
-        android:fitsSystemWindows="true"
-        tools:context=".presentation.mainactivity.MainActivity">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-            app:layout_constraintTop_toTopOf="parent" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_bottom_nav"
+        app:elevation="10dp"
+        app:itemIconSize="28dp"
+        app:itemIconTint="@color/bottom_nav_item_color"
+        app:itemTextAppearanceActive="@style/SceytBottomNavigationTextStyle"
+        app:itemTextAppearanceInactive="@style/SceytBottomNavigationTextStyle"
+        app:itemTextColor="@color/bottom_nav_item_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_bottom_navigation" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            themedBackgroundColor="@{R.color.color_bottom_nav}"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_bottom_nav"
-            app:elevation="10dp"
-            app:itemIconSize="28dp"
-            app:itemIconTint="@color/bottom_nav_item_color"
-            app:itemTextAppearanceActive="@style/SceytBottomNavigationTextStyle"
-            app:itemTextAppearanceInactive="@style/SceytBottomNavigationTextStyle"
-            app:itemTextColor="@color/bottom_nav_item_color"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/menu_bottom_navigation" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
