--- a/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
@@ -194,6 +194,7 @@
                 android:drawablePadding="12dp"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="12dp"
+                android:saveEnabled="false"
                 android:text="@string/dark_theme"
                 android:textColor="@color/sceyt_color_black_themed"
                 android:textSize="@dimen/mediumTextSize"
