--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
@@ -10,10 +10,10 @@
         android:id="@+id/members"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/sceyt_bg_ripple"
-        android:backgroundTint="@color/sceyt_color_primary"
+        android:background="@color/sceyt_color_primary"
         android:drawableStart="@drawable/sceyt_ic_members"
         android:drawablePadding="16dp"
+        android:foreground="@drawable/sceyt_bg_ripple"
         android:gravity="center_vertical"
         android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
@@ -22,7 +22,8 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UnusedAttribute" />
 
     <View
         android:id="@+id/dividerBetweenMembersAndAdmins"
@@ -35,10 +36,10 @@
         android:id="@+id/admins"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/sceyt_bg_ripple"
-        android:backgroundTint="@color/sceyt_color_primary"
+        android:background="@color/sceyt_color_primary"
         android:drawableStart="@drawable/sceyt_ic_admin"
         android:drawablePadding="16dp"
+        android:foreground="@drawable/sceyt_bg_ripple"
         android:gravity="center_vertical"
         android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
@@ -47,7 +48,8 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dividerBetweenMembersAndAdmins" />
+        app:layout_constraintTop_toBottomOf="@+id/dividerBetweenMembersAndAdmins"
+        tools:ignore="UnusedAttribute" />
 
     <View
         android:id="@+id/divider2"
@@ -60,10 +62,10 @@
         android:id="@+id/searchMessages"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/sceyt_bg_ripple"
-        android:backgroundTint="@color/sceyt_color_primary"
+        android:background="@color/sceyt_color_primary"
         android:drawableStart="@drawable/sceyt_ic_search_messages"
         android:drawablePadding="16dp"
+        android:foreground="@drawable/sceyt_bg_ripple"
         android:gravity="center_vertical"
         android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
@@ -72,7 +74,8 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider2" />
+        app:layout_constraintTop_toBottomOf="@+id/divider2"
+        tools:ignore="UnusedAttribute" />
 
     <View
         android:id="@+id/divider"
