--- a/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
@@ -42,7 +42,7 @@
                 android:background="?selectableItemBackgroundBorderless"
                 android:padding="5dp"
                 android:text="@string/sceyt_edit"
-                android:textColor="@color/sceyt_color_accent"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/mediumTextSize"
                 app:layout_constraintBottom_toBottomOf="@+id/title"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +103,7 @@
                     android:backgroundTint="#60E3E7FF"
                     android:padding="20dp"
                     android:scaleType="centerCrop"
+                    android:tint="@color/colorAccent"
                     app:layout_constraintBottom_toBottomOf="@+id/avatar"
                     app:layout_constraintEnd_toEndOf="@+id/avatar"
                     app:layout_constraintStart_toStartOf="@id/avatar"
@@ -125,6 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:background="@drawable/bg_edit_text_small_bottom_padding"
+                    android:backgroundTint="@color/colorAccent"
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto_medium"
                     android:hint="@string/display_name"
