--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
@@ -136,10 +136,12 @@
             android:layout_height="40dp"
             android:layout_marginVertical="8dp"
             android:layout_marginStart="12dp"
+            android:background="@drawable/sceyt_bg_circle"
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/messageBody"
-            app:srcCompat="@drawable/sceyt_ic_file_with_bg" />
+            app:srcCompat="@drawable/sceyt_ic_file_filled" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
             android:id="@+id/loadProgress"
