--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_input_file_attachment.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_input_file_attachment.xml
@@ -29,10 +29,12 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
+                android:background="@drawable/sceyt_bg_circle"
+                android:padding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/sceyt_ic_file_with_bg" />
+                app:srcCompat="@drawable/sceyt_ic_file_filled" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvFileName"
