--- a/SceytChatUiKit/src/main/res/layout/sceyt_messages_empty_state_self_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_messages_empty_state_self_channel.xml
@@ -10,6 +10,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
+        android:tint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
