--- a/examples/SceytDemoApp/src/main/res/layout/item_user.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/item_user.xml
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:sceytAvatarColor="@color/colorAccent"
         app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
         app:sceytAvatarEnableRipple="false"
         app:sceytAvatarViewFullName="Art d"
