--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="data"
-            type="com.sceyt.chatuikit.presentation.uicomponents.imagepicker.GalleryMediaPicker.MediaData" />
+            type="com.sceyt.chatuikit.presentation.uicomponents.imagepicker.adapter.MediaData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
