--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_image.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_image.xml
@@ -37,7 +37,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/sceyt_ic_gallery_unchecked_state"
-            bind:setGalleryItemCheckedState="@{data.selected}" />
+            setGalleryItemCheckedState="@{data.selected}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
