--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -28,6 +27,7 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivSelect"
+            setGalleryItemCheckedState="@{data.selected}"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_margin="7dp"
@@ -36,8 +36,7 @@
             android:scaleType="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/sceyt_ic_gallery_unchecked_state"
-            bind:setGalleryItemCheckedState="@{data.selected}" />
+            app:srcCompat="@drawable/sceyt_ic_gallery_unchecked_state" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvDuration"
