--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
@@ -3,13 +3,16 @@
     <declare-styleable name="ChannelsListView">
 
         <!--Background color channel list view-->
-        <attr name="sceytUiChannelListBackgroundColor" format="reference" />
+        <attr name="sceytUiChannelListBackgroundColor" format="reference|color" />
+        <attr name="sceytUiChannelListPinnedBackgroundColor" format="reference|color" />
         <!-- A color of the online indicator-->
         <attr name="sceytUiOnlineIndicatorColor" format="reference" />
         <!-- A color of the channels divider-->
         <attr name="sceytUiDividerColor" format="reference" />
         <!-- Show/Hide channels divider-->
         <attr name="sceytUiEnableDivider" format="boolean" />
+        <!-- Show channel action as popup-->
+        <attr name="sceytUiShowChannelActionAsPopup" format="boolean" />
         <!-- A color of the channel title text color-->
         <attr name="sceytUiChannelTitleTextColor" format="reference" />
         <!-- A color of the last message text color-->
@@ -22,6 +25,14 @@
         <attr name="sceytUiIndicatorSentIcon" format="reference" />
         <!-- Drawable of the message read state indicator -->
         <attr name="sceytUiIndicatorReadIcon" format="reference" />
+        <!-- Drawable of the file attachment icon -->
+        <attr name="sceytUiBodyFileAttachmentIcon" format="reference" />
+        <!-- Drawable of the image attachment icon -->
+        <attr name="sceytUiBodyImageAttachmentIcon" format="reference" />
+        <!-- Drawable of the video attachment icon -->
+        <attr name="sceytUiBodyVideoAttachmentIcon" format="reference" />
+        <!-- Drawable of the voice attachment icon -->
+        <attr name="sceytUiBodyVoiceAttachmentIcon" format="reference" />
         <!-- Drawable of the message delivery indicator -->
         <attr name="sceytUiIndicatorDeliveredIcon" format="reference" />
         <!-- Drawable of the message pending indicator -->
