--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
@@ -113,6 +113,7 @@
             android:layout_width="@dimen/messageProgressSize"
             android:layout_height="@dimen/messageProgressSize"
             android:padding="1dp"
+            android:visibility="gone"
             app:backgroundColor="@color/sceyt_progress_bg_color"
             app:iconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -121,7 +122,8 @@
             app:layout_constraintTop_toTopOf="@+id/fileImage"
             app:minProgress="2"
             app:progressColor="@color/sceyt_color_white"
-            app:trackColor="@android:color/transparent" />
+            app:trackColor="@android:color/transparent"
+            tools:visibility="visible" />
 
         <com.sceyt.chatuikit.presentation.customviews.SceytDateStatusView
             android:id="@+id/messageDate"
